@@ -69,13 +69,11 @@ AC_TRY_COMPILE([
 
 dnl Check if SUN_LEN exists
 
-AC_TRY_COMPILE([
+AC_TRY_LINK([
     #include<sys/types.h>
     #include<sys/un.h>], 
-    [struct sockaddr_un su; int i = SUN_LEN(&su);],,
-    [AC_DEFINE(SUN_LEN,
-	[(ptr)	((size_t)(((struct sockaddr_un *) 0)->sun_path) + strlen ((ptr)->sun_path))])
-    ])
+    [struct sockaddr_un su; int i = SUN_LEN(&su);],
+    [AC_DEFINE(HAVE_SUN_LEN)], )
 
 dnl check for getopt_long, substitute the distributed versions if not
 
